--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,31 @@
-# Python
+# Large data files
+src/ml/data/raw/**/*.csv
+src/ml/data/raw/**/*.CSV
+
+# Generated reports
+reports/
+
+# Test data
+data/raw/*.csv
+
+# Python cache
 __pycache__/
-*.py[cod]
-*$py.class
-*.so
+*.pyc
+*.pyo
+*.pyd
 .Python
+*.so
+*.egg
+*.egg-info/
+dist/
+build/
+
+# Virtual environment
 venv/
 env/
 ENV/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
 
-# Testing
-.pytest_cache/
-.coverage
-htmlcov/
-.tox/
-.hypothesis/
-
-# IDEs
+# IDE
 .vscode/
 .idea/
 *.swp
@@ -41,9 +36,13 @@ htmlcov/
 .DS_Store
 Thumbs.db
 
-# MkDocs
-site/
-
-# Temporary files
+# Logs
 *.log
-*.tmp
+
+# Coverage
+.coverage
+htmlcov/
+.pytest_cache/
+
+# Site
+site/
